[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Other/ActionBox.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Cinematics/Begin/backwhite.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Other/invisble.png" type="Texture" id=3]
[ext_resource path="res://Sprites/GUI/Theme/nonestyleboxtexture.tres" type="StyleBox" id=4]
[ext_resource path="res://Fonts/doublix.tres" type="DynamicFont" id=5]
[ext_resource path="res://Fonts/defaut.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sprites/GUI/Dials/box_0.png" type="Texture" id=7]

[node name="ActionBox" type="CanvasLayer"]
layer = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 1, 0.976471, 0.0588235 )
position = Vector2( 526.109, 504.551 )
scale = Vector2( 3.46352, 1.06829 )
texture = ExtResource( 2 )

[node name="ProfilePic" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -1432.01
margin_top = -169.896
margin_right = -460.007
margin_bottom = 25.1038
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_rect = Rect2( -555.912, -0.905945, 654.412, 138.495 )

[node name="Message" type="RichTextLabel" parent="."]
modulate = Color( 0.356863, 0.356863, 0.356863, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -493.36
margin_top = -193.866
margin_right = 486.64
margin_bottom = -93.8661
custom_styles/normal = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0.509804, 0.662745, 1 )
custom_colors/selection_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "aaaaaA"
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 25.0
margin_top = 399.332
margin_right = 1000.0
margin_bottom = 499.332

[node name="Name" type="Label" parent="."]
margin_left = 17.8132
margin_top = 377.978
margin_right = 102.813
margin_bottom = 405.978
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0.847059, 0.886275, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 12.7277
margin_top = 155.589
margin_right = 332.728
margin_bottom = 235.589

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 320.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/HBoxContainer/MarginContainer"]
texture = ExtResource( 7 )

[node name="talk" type="AudioStreamPlayer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
